# PyAIL

./: LICENSE  README.md  pyproject.toml
pyail/: __init__.py  api.py  core.py  exceptions.py
tests/: test_pyail.py
